2006-03-26  Marcus Crestani  <crestani@xemacs.org>

	* alloc.c (make_uninit_string): Use set_lispstringp_direct.
	* lisp.h (set_lispstringp_direct): New.

2006-03-21  Marcus Crestani  <crestani@xemacs.org>

	* mc-alloc.c (visit_all_used_page_headers):
	* mc-alloc.c (finalize_page_for_disksave):
	* mc-alloc.c (mc_finalize_for_disksave):
	* mc-alloc.c (sweep_page):
	* mc-alloc.c (mc_sweep):
	* mc-alloc.c (protect_heap_page):
	* mc-alloc.c (protect_heap_pages):
	* mc-alloc.c (unprotect_heap_page):
	* mc-alloc.c (unprotect_heap_pages):
	* mc-alloc.h: Return number of pages processed.
	* vdb.c (vdb_start_dirty_bits_recording): Adjust size of
	page_fault_table to its upper bound (= number of pages that
	contain BLACK objects) in advance, to avoid malloc in the signal
	handler.

2006-03-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* file-coding.c (decode-coding-region, encode-coding-region):
	Convert to interactive commands, and adjust docstrings.

2006-03-21  Malcolm Purvis  <malcolmp@xemacs.org>

	* regex.c: Bump INIT_FAILURE_ALLOC and re_max_failures to the
	current values found in GNU Emacs.

2006-03-20  Marcus Crestani  <crestani@xemacs.org>

	* dynarr.c (Dynarr_realloc): Malloc correct size.
	* lisp.h: Dynamic array cleanup, remove duplicate code. 

2006-03-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_font_instance_truename):
	Eliminate bogus pointer to nowhere.

2006-03-09  Jerry James  <james@xemacs.org>

	* profile.h (RETURN_UNGCPRO_EXIT_PROFILING): Add missing do.

2006-03-02  Marcus Crestani  <crestani@xemacs.org>

	* gc.c (show_gc_cursor_and_message): New.
	* gc.c (remove_gc_cursor_and_message): New.
	* gc.c (gc_prepare): Move mouse pointer code to
	show_gc_cursor_and_message.
	* gc.c (gc_finish): Move mouse pointer code to
	remove_gc_cursor_and_message.
	* gc.c (gc): Call show/remove_gc_cursor_and_message.
	* gc.c (garbage_collect_1): Call
	show/remove_gc_cursor_and_message.

2006-02-22  Marcus Crestani  <crestani@xemacs.org>
